fix: SIMD opt-out + raise fast-drop kick threshold 20 → 200
Two operator-reported bugs:

1. --add-modules=jdk.incubator.vector DEGRADES chunk render on some
   CPUs/JVMs (aarch64 NEON 128-bit, AVX2-only CPUs forced into
   emulated wide vector lanes). Pufferfish auto-enables SIMD when the
   vector module is loaded with no operator escape hatch.

   Fix: add pufferfish.yml knob 'simd.force-disable' (default false).
   When true, SIMDDetection.isEnabled is forced to false even if the
   vector module is loaded. Operator gets a WARN line. Falls back to
   scalar paths.

2. Fast Q-drops (Ctrl+Q full inventory) kick player as 'dropped items
   too quickly (Hacking?)' at >= 20 drops/tick. Threshold too tight —
   Ctrl+Q a 36-stack inventory queues 36 drop packets in a single
   tick on fast clients.

   Fix: raise threshold 20 → 200 per tick. Still catches actual hack
   clients (autoclick + auto-drop scripts churn thousands/sec) but
   lets normal-but-fast play through. New paperweight patch 0051
   covers ServerGamePacketListenerImpl.handlePlayerAction DROP_ITEM
   branch.

Also picks up paperweight auto-rename of 0050 (excess boats) — same
content, just paperweight's regenerated naming.